Alignment fixes.

--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,6 +1,6 @@
 .navigation {
     padding: 15px 0;
-    padding-left: calc(5vw - 10px);
+    padding-left: calc(5vw - 20px);
 
     ul {
         display: flex;
